syntax = "proto3";

option csharp_namespace = "SpecIdentityServer";

package announcer;

import "google/protobuf/timestamp.proto";

service EventHandler {
  rpc NewEvent (NewEventRequest) returns (NewEventReply);
}

message NewEventRequest {
  string event_unique_name = 1;
  google.protobuf.Timestamp event_date = 2;
  string event_data = 3;
}

message NewEventReply {
  uint32 status = 1;
  string status_message = 2;
}
