syntax = "proto3";

option csharp_namespace = "SpecNewsReports";

package announcer;

import "google/protobuf/timestamp.proto";

service Subscribers {
  rpc Subscribe (SubscribeRequest) returns (SubscribeReply);
  rpc SubscribeStream (stream SubscribeStreamRequest) returns (stream SubscribeStreamReply);
  rpc GetSubscribe (GetSubscribeRequest) returns (GetSubscribeReply);
}

// Subscribe
message SubscribeRequest {
  bool enable = 1;
  string subscriber_unique_name = 2;
  string subscriber_url = 3;
  string event_unique_name = 4;
  int32 priority = 5;
}

message SubscribeReply {
  uint32 status = 1;
  string status_message = 2;
}

// SubscribeStream
message SubscribeStreamRequest {
  bool enable = 1;
  string subscriber_unique_name = 2;
}

message SubscribeStreamReply {
  uint32 status = 1;
  string status_message = 2;
  string subscriber_unique_name = 3;
  string event_unique_name = 4;
  google.protobuf.Timestamp event_date = 5;
  string event_data = 6;
}

// GetSubscribe
message GetSubscribeRequest {
  string subscriber_unique_name = 1;
}

message GetSubscribeReply {
  uint32 status = 1;
  string status_message = 2;
  string subscriber_url = 3;
}
